--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </p>
 
               <p>
-                  My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am passionate in exploring how prior knowldge will empower safer, robust, and explainable deep learning models. I have also worked on other topics like reinforcement learning, graph neural networks, and deep generative models.
+                  My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am passionate in exploring how prior knowldge will empower safer, robust, and explainable deep learning models. I have also worked on other topics like reinforcement learning, graph neural networks, and probabilistic graphical models.
               </p>
                 
 
@@ -83,13 +83,13 @@
                 <tr><td style="width:20%;">2023/04 - Our paper on Longitudinal Contorl of Electrical Connected Vehicle got accepted to Games.</td></tr>
                 <tr><td style="width:20%;">2023/01 - Our paper on Robust Data Sampling got accepted to Games.</td></tr>
                 <tr><td style="width:20%;">2022/09 - Our paper on traffic state estimation using joint of Normalizing flow and GAN got accepted to ECML 2022.</td></tr>
-                <tr><td style="width:20%;">2022/08 - Best Paper award in the KDD 2023 workshop on urban computing</td></tr>
-                <tr><td style="width:20%;">2022/08 - Our paper on decentralized traffic signal control got published to Transportation Research: Part C</td></tr>
+                <tr><td style="width:20%;">2022/08 - <strong style="color:orange"> <a href="https://www.civil.columbia.edu/news/international-workshop-urban-computing-2022-best-paper-award-won-professor-sharon-di">Best Paper</strong></a> award in KDD 2023 workshop on urban computing</td></tr>
+                <tr><td style="width:20%;">2022/08 - Our paper on decentralized traffic signal control got published to TRC</td></tr>
                 <tr><td style="width:20%;">2022/06 - Joined Siemens as a Student Researcher.</td></tr>
-                <tr><td style="width:20%;">2021/09 - Our paper on Physics-informed Deep Learning for Traffic State Estimation got published to IEEE Transaction on Intelligent Transportation System.</td></tr>
-                <tr><td style="width:20%;">2021/09 - Our paper on Physics-informed Deep Learning for Car-following Modeling got published to ITransportation Research: Part C</td></tr>
-                <tr><td style="width:20%;">2021/05 - Our paper on Physics-informed Deep Learning for Traffic State Estimation got published to IEEE Transaction on AAAI 2021</td></tr>
-                <tr><td style="width:20%;">2018/12 - <strong style="color:white">I am fortunate to marry Xiangyi Liao</strong></td></tr> 
+                <tr><td style="width:20%;">2021/09 - Our paper on Physics-informed Deep Learning for Traffic State Estimation got published to IEEE T-ITS.</td></tr>
+                <tr><td style="width:20%;">2021/09 - Our paper on Physics-informed Deep Learning for Car-following Modeling got published to TRC</td></tr>
+                <tr><td style="width:20%;">2021/05 - Our paper on Physics-informed Deep Learning for Traffic State Estimation got published to AAAI 2021</td></tr>
+                <tr><td style="width:20%;"><strong style="color:white">2018/12 - I am fortunate to marry Xiangyi Liao</strong></td></tr> 
             </table>
         </section>
 
@@ -230,7 +230,7 @@
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
-                  Abridged in KDD 2022 Workshop on Urban Computing <strong style="color:orange">(Best Paper)</strong></em>. 
+                  Abridged in KDD 2022 Workshop on Urban Computing <strong style="color:orange">(<a href="https://www.civil.columbia.edu/news/international-workshop-urban-computing-2022-best-paper-award-won-professor-sharon-di">Best Paper</a>)</strong></em>. 
                 <br>
                 <a href="http://urban-computing.com/urbcomp2022/file/UrbComp2022_paper_3574.pdf">[paper]</a>
             </td>
@@ -353,7 +353,7 @@
                 <a href="https://www.researchgate.net/profile/Xiao-Zhongyang"><author>Zhongyang Xiao</author></a>, <strong>Zhaobin Mo</strong>, <a href="http://www.svm.tsinghua.edu.cn/essay/80/1809.html"><author>Kun Jiang</author></a>, and <a href="http://www.svm.tsinghua.edu.cn/essay/80/1834.html"><author>Diange Yang</author></a>
                 <br>
                 <em>
-                  IEEE International Conference on Multimedia & Expo Workshops (ICMEW) (<strong>ICMEW</strong>), 2018</em>.
+                  IEEE International Conference on Multimedia & Expo Workshops (<strong>ICMEW</strong>), 2018</em>.
                 <br>
                 <a href="https://ieeexplore.ieee.org/abstract/document/8551565">[paper]</a>
             </td>
@@ -370,8 +370,8 @@
         <section id="Service" >
             <h2 style="padding-bottom:1vh;">Service</h2>    
             <table style="line-height:150%" class="table table-hover table-striped">
-              <tr><td style="width:25%;">Conference Reviewer: KDD 2022, ECML 2021, AAAI 2021</td></tr>
-              <tr><td style="width:25%;">Journal Reviewer: T-ITS </td></tr>
+              <tr><td style="width:25%;">Conference Reviewer: KDD 2022, ECML-PKDD 2021</td></tr>
+              <tr><td style="width:25%;">Journal Reviewer: T-ITS, TRC </td></tr>
             </table>
         </section>
 
