--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
               </p>
               <p>
                 I am currently a final-year Ph. D. student in Civil Engineering at Columbia University advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
-                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I was recognized as a President Fellow and Mindlin Scholar at CU. Before joining CU, I received my Bachelor of Engineering from the <a href="http://www.dae.tsinghua.edu.cn/publish/daeen/index.html">School of Vehicle and Mobility</a> at Tsinghua University.
+                (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I was recognized as a President Fellow and Mindlin Scholar at CU. Before joining CU, I received a B.E. from <a href="https://www.tsinghua.edu.cn/en">Tsinghua University</a> in 2017.
               </p>
 
               <p>
-                  My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am passionate in exploring how prior knowldge will empower safer, robust, and explainable deep learning models. I have also worked on other topics like reinforcement learning, graph neural networks, and probabilistic graphical models.
+                  My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am passionate in exploring how prior knowldge is able to foster safe, robust, and explainable AI. I have also worked on other topics like reinforcement learning, graph neural networks, and probabilistic graphical models.
               </p>
                 
 
@@ -78,17 +78,17 @@
         <section id="News">
             <h2 style="padding-bottom:1vh;"> News </h2>
             <table style="line-height:150%" class="table table-hover table-striped">
-                <tr><td style="width:20%;">2023/06 - Our survey paper about Physics-informed Deep Learning in Traffic State Estimation accepted by Algorithms</td></tr>
+                <tr><td style="width:20%;">2023/06 - Our physics-informed deep learning (PIDL) survey paper was accepted by Algorithms</td></tr>
                 <tr><td style="width:20%;">2023/05 - Selected as Mindlin Scholar Civil in Engineering by Columbia University. </td></tr>
-                <tr><td style="width:20%;">2023/04 - Our paper on Longitudinal Contorl of Electrical Connected Vehicle got accepted to Games.</td></tr>
-                <tr><td style="width:20%;">2023/01 - Our paper on Robust Data Sampling got accepted to Games.</td></tr>
-                <tr><td style="width:20%;">2022/09 - Our paper on traffic state estimation using joint of Normalizing flow and GAN got accepted to ECML 2022.</td></tr>
-                <tr><td style="width:20%;">2022/08 - <strong style="color:orange"> <a href="https://www.civil.columbia.edu/news/international-workshop-urban-computing-2022-best-paper-award-won-professor-sharon-di">Best Paper</strong></a> award in KDD 2023 workshop on urban computing</td></tr>
-                <tr><td style="width:20%;">2022/08 - Our paper on decentralized traffic signal control got published to TRC</td></tr>
+                <tr><td style="width:20%;">2023/04 - Our paper on Longitudinal Contorl of Electrical Connected Vehicle got accepted to <a href="https://www.mdpi.com/2076-3417/13/8/5089">Applied Science</a>.</td></tr>
+                <tr><td style="width:20%;">2023/01 - Our paper on Robust Data Sampling got accepted to <a href="https://www.mdpi.com/2073-4336/14/1/13">Games</a>.</td></tr>
+                <tr><td style="width:20%;">2022/09 - Our paper on uncertainty quantification of traffic state estimation got accepted to <a href="https://link.springer.com/chapter/10.1007/978-3-031-26409-2_20">ECML-PKDD 2022</a>.</td></tr>
+                <tr><td style="width:20%;">2022/08 - <a href="https://www.civil.columbia.edu/news/international-workshop-urban-computing-2022-best-paper-award-won-professor-sharon-di">Best Paper</a> award in KDD 2023 workshop on urban computing</td></tr>
+                <tr><td style="width:20%;">2022/08 - Our paper on decentralized traffic signal control got published to <a href="https://www.sciencedirect.com/science/article/pii/S0968090X22001644">TRC</a></td></tr>
                 <tr><td style="width:20%;">2022/06 - Joined Siemens as a Student Researcher.</td></tr>
-                <tr><td style="width:20%;">2021/09 - Our paper on Physics-informed Deep Learning for Traffic State Estimation got published to IEEE T-ITS.</td></tr>
-                <tr><td style="width:20%;">2021/09 - Our paper on Physics-informed Deep Learning for Car-following Modeling got published to TRC</td></tr>
-                <tr><td style="width:20%;">2021/05 - Our paper on Physics-informed Deep Learning for Traffic State Estimation got published to AAAI 2021</td></tr>
+                <tr><td style="width:20%;">2021/09 - Our paper on PIDL for traffic state estimation got published to <a href="https://ieeexplore.ieee.org/abstract/document/9531557">IEEE T-ITS</a>.</td></tr>
+                <tr><td style="width:20%;">2021/09 - Our paper on PIDL for imitating human driving got published to <a href="https://www.sciencedirect.com/science/article/pii/S0968090X21002539">TRC</a></td></tr>
+                <tr><td style="width:20%;">2021/05 - Our paper on PIDL for traffic state estimation got published to <a href="https://ojs.aaai.org/index.php/AAAI/article/view/16132">AAAI 2021</a></td></tr>
                 <tr><td style="width:20%;"><strong style="color:white">2018/12 - I am fortunate to marry Xiangyi Liao</strong></td></tr> 
             </table>
         </section>
@@ -230,7 +230,7 @@
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
-                  Abridged in KDD 2022 Workshop on Urban Computing <strong style="color:orange">(<a href="https://www.civil.columbia.edu/news/international-workshop-urban-computing-2022-best-paper-award-won-professor-sharon-di">Best Paper</a>)</strong></em>. 
+                  Abridged in KDD 2022 Workshop on Urban Computing (<a href="https://www.civil.columbia.edu/news/international-workshop-urban-computing-2022-best-paper-award-won-professor-sharon-di">Best Paper</a>)</em>. 
                 <br>
                 <a href="http://urban-computing.com/urbcomp2022/file/UrbComp2022_paper_3574.pdf">[paper]</a>
             </td>
@@ -372,6 +372,19 @@
             <table style="line-height:150%" class="table table-hover table-striped">
               <tr><td style="width:25%;">Conference Reviewer: KDD 2022, ECML-PKDD 2021</td></tr>
               <tr><td style="width:25%;">Journal Reviewer: T-ITS, TRC </td></tr>
+            </table>
+        </section>
+
+        <br>
+
+        <br>
+
+        <section id="Teaching" >
+            <h2 style="padding-bottom:1vh;">Service</h2>    
+            <table style="line-height:150%" class="table table-hover table-striped">
+              <tr><td style="width:25%;">Teaching Assistant of CIEN E4011: Big Data Analytics in Transportation, Columbia University Spring 2019-2021, Spring 2023</td></tr>
+              <tr><td style="width:25%;">Teaching Assistant of CEOR E4011: Civil Infrastructure Systems Optimization, Fall 2020, Summer 2021</td></tr>
+              <tr><td style="width:25%;">Teaching Assistant of CIEN E4131: Principle of Construction Techniques, Spring 2021</td></tr>
             </table>
         </section>
 
