--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 <name>Zhaobin Mo - 莫钊镔</name>
               </p>
               <p>
-                I am currently a final-year Ph. D. student in Civil Engineering at Columbia University advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
+                I am currently a final-year Ph.D. student in Civil Engineering at Columbia University advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
                 (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I was recognized as a President Fellow and Mindlin Scholar at CU. Before joining CU, I received a B.E. from <a href="https://www.tsinghua.edu.cn/en">Tsinghua University</a> in 2017.
               </p>
 
               <p>
-                  My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am passionate in exploring how prior knowldge is able to foster safe, robust, and explainable AI. I have also worked on other topics like reinforcement learning, graph neural networks, and probabilistic graphical models.
+                  My research focuses on physics-informed deep learning that facilitates the integration of domain knowledge and deep learning models. I am passionate about exploring how prior knowledge can foster safe, robust, and explainable AI. I have also worked on other topics like reinforcement learning, graph neural networks, and probabilistic graphical models.
               </p>
                 
 
@@ -78,7 +78,7 @@
         <section id="News">
             <h2 style="padding-bottom:1vh;"> News </h2>
             <table style="line-height:150%" class="table table-hover table-striped">
-                <tr><td style="width:20%;">2023/06 - Our physics-informed deep learning (PIDL) survey paper was accepted by Algorithms</td></tr>
+                <tr><td style="width:20%;">2023/06 - Our physics-informed deep learning (PIDL) survey paper was accepted by <a href="https://www.mdpi.com/1999-4893/16/6/305">Algorithms</a></td></tr>
                 <tr><td style="width:20%;">2023/05 - Selected as Mindlin Scholar Civil in Engineering by Columbia University. </td></tr>
                 <tr><td style="width:20%;">2023/04 - Our paper on Longitudinal Contorl of Electrical Connected Vehicle got accepted to <a href="https://www.mdpi.com/2076-3417/13/8/5089">Applied Science</a>.</td></tr>
                 <tr><td style="width:20%;">2023/01 - Our paper on Robust Data Sampling got accepted to <a href="https://www.mdpi.com/2073-4336/14/1/13">Games</a>.</td></tr>
@@ -183,9 +183,9 @@
                   <author>Guohua Li</author></a>
                 <br>
                 <em>
-                  Applied Sciences, 2023</em>
+                  Artificial Intelligence in Medicine, 2023</em>
                 <br>
-                <a href="https://www.mdpi.com/2076-3417/13/8/5089">[paper]</a>
+                <a href="https://www.sciencedirect.com/science/article/pii/S0933365723000246">[paper]</a>
             </td>
           </tr>
 
@@ -311,7 +311,7 @@
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
                 <br>
                 <em>
-                  Transportation research part C (<strong>TRC</strong>), 2021</em>.
+                  Transportation research part C, 2021</em>.
                 <br>
                 <a href="https://www.sciencedirect.com/science/article/pii/S0968090X21002539">[paper]</a>
                 <a href="https://github.com/ZhaobinMo/PINN_CFM">[code]</a>
@@ -335,7 +335,7 @@
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a> and <a href="http://www.columbia.edu/~qd2125"><author>Qiang Du</author></a>
                 <br>
                 <em>
-                  IEEE Transactions on Intelligent Transportation Systems (<strong>TITS</strong>), 2021</em>.
+                  IEEE Transactions on Intelligent Transportation Systems, 2021</em>.
                 <br>
                 <a href="https://ieeexplore.ieee.org/abstract/document/9531557">[paper]</a>
             </td>
