--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <name>Zhaobin Mo - 莫钊镔</name>
               </p>
               <p>
-                I am currently a final-year Ph.D. student in Civil Engineering at Columbia University advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
+                I am currently a final-year Ph.D. student in Civil Engineering at <a href="https://www.columbia.edu">Columbia University</a> advised by <a href="https://www.civil.columbia.edu/content/xuan-sharon-di">Prof. Xuan Di</a>
                 (<a href="https://sharondi-columbia.wixsite.com/ditectlab/">Ditect Lab</a>). I was recognized as a President Fellow and Mindlin Scholar at CU. Before joining CU, I received a B.E. from <a href="https://www.tsinghua.edu.cn/en">Tsinghua University</a> in 2017.
               </p>
 
