--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <p style="text-align:center">
                 <a href="mailto:zm2302@columbia.edu">Email</a> &nbsp/&nbsp
                 <a href="data/CV_ZhaobinMo.pdf">CV (last updated: July 2023)</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=zh-CN&user=A1yMyYEAAAAJ">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=PoExlP0AAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/ZhaobinMo">Github</a>
               </p>
             </td>
@@ -403,6 +403,21 @@
       </td>
     </tr>
   </table>
+
+          <hr>
+  
+        <table width="80%" align="left" border="0" cellspacing="0" cellpadding="20">
+          <tr>
+            <td>
+              <br>
+              <p align="left">
+                <font size="2">
+                  Based on <a href="https://jonbarron.info/">this website</a>.
+                  </font>
+              </p>
+            </td>
+          </tr>
+        </table>
 </body>
 
 </html>
