--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 Uncertainty quantification of car-following behaviors: physics-informed generative adversarial networks</papertitle>
+                 Uncertainty Quantification of Car-following Behaviors: Physics-informed Generative Adversarial Networks</papertitle>
                 </p>
                 <strong>Zhaobin Mo</strong> and
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
@@ -244,7 +244,7 @@
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 Quantifying uncertainty in traffic state estimation using generative adversarial networks</papertitle>
+                 Quantifying Uncertainty in Traffic State Estimation using Generative Adversarial Networks</papertitle>
                 </p>
                 <strong>Zhaobin Mo</strong>, <a href="https://www.linkedin.com/in/yongjie-fu-b42590212"><author>Yongjie Fu</author></a>, and
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
@@ -265,7 +265,7 @@
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 CVLight: Decentralized learning for adaptive traffic signal control with connected vehicles</papertitle>
+                 CVLight: Decentralized Learning for Adaptive Traffic Signal Control with Connected Vehicles</papertitle>
                 </p>
                 <strong>Zhaobin Mo</strong>, <a href="https://www.linkedin.com/in/wangzhi-li"><author>Wangzhi Li</author></a>, <a href="https://www.linkedin.com/in/yongjie-fu-b42590212"><author>Yongjie Fu</author></a>, <a href="https://www.linkedin.com/in/kangrui-ruan"><author>Kangrui Ruan</author></a>, and
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
@@ -285,7 +285,7 @@
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 Physics-informed deep learning for traffic state estimation: A hybrid paradigm informed by second-order traffic models</papertitle>
+                 Physics-informed Deep Learning for Traffic State Estimation: A Hybrid Paradigm Informed by Second-order Traffic Models</papertitle>
                 </p>
                 <a href="https://rongyeshi.github.io/"><author>Rongye Shi</author></a>, <strong>Zhaobin Mo</strong>, and
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
@@ -305,7 +305,7 @@
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 A physics-informed deep learning paradigm for car-following models</papertitle>
+                 A Physics-informed Deep Learning Paradigm for Car-following Models</papertitle>
                 </p>
                 <strong>Zhaobin Mo</strong>, <a href="https://rongyeshi.github.io/"><author>Rongye Shi</author></a>, and
                 <a href="https://www.civil.columbia.edu/content/xuan-sharon-di"><author>Xuan Di</author></a>
@@ -327,7 +327,7 @@
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 A physics-informed deep learning paradigm for traffic state and fundamental diagram estimation</papertitle>
+                 A Physics-informed Deep Learning Paradigm for Traffic State and Fundamental Diagram Estimation</papertitle>
                 </p>
                 <a href="https://rongyeshi.github.io/"><author>Rongye Shi</author></a>,
                 <strong>Zhaobin Mo</strong>, 
@@ -348,7 +348,7 @@
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 Multimedia fusion at semantic level in vehicle cooperactive perception</papertitle>
+                 Multimedia Fusion at Semantic Level in Vehicle Cooperactive Perception</papertitle>
                 </p>
                 <a href="https://www.researchgate.net/profile/Xiao-Zhongyang"><author>Zhongyang Xiao</author></a>, <strong>Zhaobin Mo</strong>, <a href="http://www.svm.tsinghua.edu.cn/essay/80/1809.html"><author>Kun Jiang</author></a>, and <a href="http://www.svm.tsinghua.edu.cn/essay/80/1834.html"><author>Diange Yang</author></a>
                 <br>
