--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <table style="line-height:150%" class="table table-hover table-striped">
                 <tr><td style="width:20%;">2023/06 - Our physics-informed deep learning (PIDL) survey paper was accepted by <a href="https://www.mdpi.com/1999-4893/16/6/305">Algorithms</a></td></tr>
                 <tr><td style="width:20%;">2023/05 - Selected as Mindlin Scholar Civil in Engineering by Columbia University. </td></tr>
-                <tr><td style="width:20%;">2023/04 - Our paper on Longitudinal Contorl of Electrical Connected Vehicle got accepted to <a href="https://www.mdpi.com/2076-3417/13/8/5089">Applied Science</a>.</td></tr>
+                <tr><td style="width:20%;">2023/04 - Our paper on Longitudinal Control of Electrical Connected Vehicle got accepted to <a href="https://www.mdpi.com/2076-3417/13/8/5089">Applied Science</a>.</td></tr>
                 <tr><td style="width:20%;">2023/01 - Our paper on Robust Data Sampling got accepted to <a href="https://www.mdpi.com/2073-4336/14/1/13">Games</a>.</td></tr>
                 <tr><td style="width:20%;">2022/09 - Our paper on uncertainty quantification of traffic state estimation got accepted to <a href="https://link.springer.com/chapter/10.1007/978-3-031-26409-2_20">ECML-PKDD 2022</a>.</td></tr>
                 <tr><td style="width:20%;">2022/08 - <a href="https://www.civil.columbia.edu/news/international-workshop-urban-computing-2022-best-paper-award-won-professor-sharon-di">Best Paper</a> award in KDD 2023 workshop on urban computing</td></tr>
@@ -167,7 +167,7 @@
                 <strong>Zhaobin Mo</strong>,
                 <a href="https://stat.columbia.edu/department-directory/name/shaw-hwa-lo">
                   <author>Shaw-Hwa Lo</author></a>, 
-                <a href="hhttps://coloradosph.cuanschutz.edu/resources/directory/directory-profile/Diguiseppi-Carolyn-UCD1450">
+                <a href="https://coloradosph.cuanschutz.edu/resources/directory/directory-profile/Diguiseppi-Carolyn-UCD1450">
                   <author>Carolyn DiGuiseppi </author></a>, 
                 <a href="https://lsa.umich.edu/psych/people/affiliated-faculty/eby.html">
                   <author>David W. Eby</author></a>，
@@ -348,7 +348,7 @@
               <td style="padding:10px;width:80%;vertical-align:middle">
                 <p>
                 <papertitle>
-                 Multimedia Fusion at Semantic Level in Vehicle Cooperactive Perception</papertitle>
+                 Multimedia Fusion at Semantic Level in Vehicle Cooperative Perception</papertitle>
                 </p>
                 <a href="https://www.researchgate.net/profile/Xiao-Zhongyang"><author>Zhongyang Xiao</author></a>, <strong>Zhaobin Mo</strong>, <a href="http://www.svm.tsinghua.edu.cn/essay/80/1809.html"><author>Kun Jiang</author></a>, and <a href="http://www.svm.tsinghua.edu.cn/essay/80/1834.html"><author>Diange Yang</author></a>
                 <br>
@@ -382,9 +382,9 @@
         <section id="Teaching" >
             <h2 style="padding-bottom:1vh;">Service</h2>    
             <table style="line-height:150%" class="table table-hover table-striped">
-              <tr><td style="width:25%;">Teaching Assistant of CIEN E4011: Big Data Analytics in Transportation, Columbia University Spring 2019-2021, Spring 2023</td></tr>
-              <tr><td style="width:25%;">Teaching Assistant of CEOR E4011: Civil Infrastructure Systems Optimization, Fall 2020, Summer 2021</td></tr>
-              <tr><td style="width:25%;">Teaching Assistant of CIEN E4131: Principle of Construction Techniques, Spring 2021</td></tr>
+              <tr><td style="width:25%;">Teaching Assistant of CIEN E4011: Big Data Analytics in Transportation, Columbia University, Spring 2019-2021, Spring 2023</td></tr>
+              <tr><td style="width:25%;">Teaching Assistant of CEOR E4011: Civil Infrastructure Systems Optimization, Columbia University, Fall 2020, Summer 2021</td></tr>
+              <tr><td style="width:25%;">Teaching Assistant of CIEN E4131: Principle of Construction Techniques, Columbia University, Spring 2021</td></tr>
             </table>
         </section>
 
@@ -404,20 +404,20 @@
     </tr>
   </table>
 
-          <hr>
-  
-        <table width="80%" align="left" border="0" cellspacing="0" cellpadding="20">
-          <tr>
-            <td>
-              <br>
-              <p align="left">
-                <font size="2">
-                  Based on <a href="https://jonbarron.info/">this website</a>.
-                  </font>
-              </p>
-            </td>
-          </tr>
-        </table>
+  <hr>
+
+  <table width="80%" align="left" border="0" cellspacing="0" cellpadding="20">
+    <tr>
+      <td>
+        <br>
+        <p align="left">
+          <font size="2">
+            Based on <a href="https://jonbarron.info/">this website</a>.
+            </font>
+        </p>
+      </td>
+    </tr>
+  </table>
 </body>
 
 </html>
