--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <tr><td style="width:20%;">2024/06 - Our paper on mean-field games and traffic flow models was accepted by Transportation Science.</td></tr>
                 <tr><td style="width:20%;">2024/06 - Joined Argonne National Lab as a Student Researcher.</td></tr>
                 <tr><td style="width:20%;">2024/05 - Our paper on human mobility prediction was accepted by <a href="https://dl.acm.org/doi/abs/10.1145/3673227">
-Transactions on Spatial Algorithms and Systems </a></td></tr>
+ACM Transactions on Spatial Algorithms and Systems </a></td></tr>
                 <tr><td style="width:20%;">2023/12 - Our paper on pedestrian trajectory prediction was accepted by <a href="https://dl.acm.org/doi/abs/10.5555/3635637.3663001">AAMAS 2024</a></td></tr>
                 <tr><td style="width:20%;">2023/06 - Our physics-informed deep learning (PIDL) survey paper was accepted by <a href="https://www.mdpi.com/1999-4893/16/6/305">Algorithms</a></td></tr>
                 <tr><td style="width:20%;">2023/05 - Selected as Mindlin Scholar Civil in Engineering by Columbia University. </td></tr>
