--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               
               <p style="text-align:center">
                 <a href="mailto:zm2302@columbia.edu">Email</a> &nbsp/&nbsp
-                <a href="data/CV_ZhaobinMo.pdf">CV (last updated: July 2023)</a> &nbsp/&nbsp
+                <a href="data/CV_ZhaobinMo.pdf">CV (last updated: Dec. 2024)</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=PoExlP0AAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/ZhaobinMo">Github</a>
               </p>
